# pysfmc

./: .env.example  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: assets_categories_demo.py  get_asset_by_id.py
src/pysfmc/: __init__.py  auth.py  client.py  exceptions.py
src/pysfmc/assets/: __init__.py  categories.py  client.py  content.py  query.py
src/pysfmc/models/assets/: __init__.py  assets.py  categories.py
tests/: test_client.py
