[project]
name = "pysfmc"
version = "0.1.0"
description = "Python client for Salesforce Marketing Cloud (SFMC) API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "respx>=0.20.0",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pysfmc"]
